# TrendingHunter

./: .env.example  .gitignore  CLAUDE.md  README.md  config.example.yaml  config.yaml  pyproject.toml
docs/: prd.md  product-vision.md
outputs/: gap-report.json  gap-report.md
scripts/: cron_run_all.sh
src/trending_hunter/: __main__.py  cli.py  collector.py  config.py  cost.py  dedup.py  gate.py  log.py  models.py  pipeline.py  search.py  settings.py  utils.py  writer.py
src/trending_hunter/fetchers/: __init__.py  github.py  hackernews.py  producthunt.py
src/trending_hunter/llm/: audit.py  client.py  draft.py  prompts.py  rewrite.py  tools.py
tests/: conftest.py  test_cli.py  test_client.py  test_config.py  test_dedup.py  test_fetchers.py  test_gate.py  test_github.py  test_llm.py  test_log.py  test_main.py  test_models.py  test_pipeline.py  test_retry.py  test_search.py  test_settings.py  test_tools.py  test_utils.py  test_writer.py
